# git_blame_search

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_tests.sh  test_git_blame_tool.py  uv-git-blame-quickstart.md
.github/workflows/: publish.yml  test.yml
git_blame_lake/blame.lance/_versions/: 1.manifest
git_blame_lake/commits.lance/_transactions/: 1-4a6819cb-11d6-4eab-91a6-dfba6c662ad4.txn  1-5abbc731-8eb2-495b-933a-e2c1a36b8642.txn
git_blame_lake/commits.lance/_versions/: 1.manifest  2.manifest  3.manifest
git_blame_lake/commits.lance/data/: dd69b7b8-7730-43a3-b95d-f2933c7237ee.lance
git_blame_lake/diffs.lance/_versions/: 1.manifest
src/: server.py
